style.css
:root{
    --sectionPadding-top:100px;
    --sectionPadding-bottom:100px;
    --mainColor:#2196f3;
    --mainBackgroundColor:#ececec;
    --main-transtion:0.3s;
    --featColorOne:#009688;
    --featColorTwo:#f44036;
}

*{
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin: 0;

}

html{
    scroll-behavior: smooth;

}

body{
    font-family: "Cairo", sans-serif;
}

a{
    text-decoration: none;
}
ul,
li{
    list-style: none;
    padding: 0;
}
/* here is my component start */
.container-compo {
    text-transform: uppercase;
    padding-top: var(--sectionPadding-top);
    padding-bottom: var(--sectionPadding-bottom);
    display: flex;
    justify-content: center;
}

.container-compo h2{
    max-width: fit-content;
    letter-spacing: 1px;
    padding: 10px 20px 10px 20px;
    position: relative;
    font-size: 30px;
    border: 2px solid black;
    z-index: 1;
    transition-duration: 0.5s;
    transition-delay: 0.4s;
    
}

.container-compo h2:hover{
    border: transparent 0px solid;
    color: white;
}
.container-compo h2::before{
    content: "";
    position: absolute;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: var(--mainColor);
    right: -25%;
    top: 50%;
    transform: translateY(-50%);
    transition: 0.5s linear;
    z-index: -1;
}
.container-compo h2::after{
    content: "";
    position: absolute;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: var(--mainColor);
    left: -25%;
    top: 50%;
    transform: translateY(-50%);
    transition: 0.5s linear;
    z-index: -1;

}

.container-compo h2:hover:after{
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 0;
}
.container-compo h2:hover::before{
    right: 0;
    width: 100%;
    height: 100%;
    border-radius: 0;
}
/* here is my component end */


.container{
    margin-left: auto;
    margin-right: auto;
    padding-left: 15px;
    padding-right: 15px;
}

/* small screen container */
@media (min-width:768px) {
    .container{
        width: 750px;
    }
}
/* mediam screen container */
@media (min-width:992px) {
    .container{
        width: 970px;
    }
}
/* large screen container */
@media (min-width:1200px) {
    .container{
        width: 1170px;
    }
}

/* header start  */
header{
    position: relative;
    box-shadow: 0 0 15px 1px  rgb(0, 0,0,0.6);
    background-color: #ececec;
}

header .container{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}
header .logo{
    color: var(--mainColor);
    padding: 0px 25px;
    font-size: 25px;
    height: 72px;
    text-transform: capitalize;
    font-weight: 600;
    display: flex;
    justify-content: center;
    align-items: center;
}
@media (max-width:767px) {
    header .container .logo{
        width: 100%;
    }
}
header .container  .main-nav{
    display: flex;
    align-items: center;
    justify-content: space-a;
    font-size: 18px;

}


header .container .main-nav > li a{
    color: black;
    height: 72px;
    padding: 0 25px;
    cursor: pointer;
    position: relative;
    transition: var(--main-transtion);
    display: flex;
    justify-content: center;
    align-items: center;
}
@media (max-width:767px) {
    header .container  .main-nav{
        justify-content: center;
        margin: auto;
    }
    header .container .main-nav >  li  a{
        padding: 10px;
        font-size: 16px;
    }
}
header .container .main-nav > li a::before{
    content: "";
    position: absolute;
    height: 4px;
    width: 0;
    left: 0;
    top: 0;
    background-color: var(--mainColor);
    transition: var(--main-transtion);

}
header .container .main-nav > li a:hover::before{
    width: 100%;
}
header .container  .main-nav > li a:hover{
    color: var(--mainColor);
}
/* header end  */

/* dropdown start  */

header .container{
    position: relative;
}
.mainmenu:hover + .dropdown{
    opacity: 1;
    transition: var(--main-transtion);
    top: 100%;
}
.dropdown{
    position: absolute;
    left: 0;
    max-width: 100%;
    top: calc(100% + 75px);
    background-color: white;
    border-bottom: var(--mainColor) solid 4px;
    display: flex;
    padding: 25px;
    gap: 30px;
    z-index: 1;
    opacity: 0;
}
.dropdown img{
    height: 100%;
    margin: auto;
}
.dropdown ul{
    color: var(--mainColor);
    display: flex;
    flex-direction: column;
    margin-left: 20px;
    padding-top: 30px;
}
.dropdown ul li{
    min-width: 250px;
    height: 50px;
    font-size: 16px;
    text-align: left;
    
}
.dropdown ul li a{
    padding-bottom: 15px;
    border-bottom: rgb(153, 153, 153,0.3) solid 1px;
    color: var(--mainColor);
    font-weight: 600;
    display: flex;
    justify-content: left;
    align-items: center;
    display: block;
}

.dropdown ul li i{
    margin-right: 15px;
}
@media (max-width:767px) {
    .dropdown{
        flex-direction: column;
        width: 100%;
        gap: 0;
    }
    .dropdown ul{
        padding-top: 0;
        margin-left: 5px;

    }
    .dropdown ul li a{
        font-size: 20px;

    }
    .dropdown img{
        display: none;
    }
}
/* .main-nav end */

/* landing start  */
.landing {
    position: relative;
}
.landing::before{
    content: "";
    position: absolute;
    top: -70px;
    height: 100%;
    width: 100%;
    background-color: hsl(0, 4%, 75%,0.3);
    z-index: -1;
    transform: skewY(-6deg);
}
.landing .container{
    display: flex;
    justify-content: space-between;
    min-height: calc(100vh - 72px);
    padding-top: var(--sectionPadding-top);
    padding-bottom: var(--sectionPadding-bottom);
}
.landing .text{
    flex: 1;
    position: relative;
    top: 50px;
    width: 500px;
}
.landing .text h1{
    font-size: 42px;
    margin: 0;
}

.landing .text p{
    margin-top: 10px;
    color: #777;
    font-size: 28px;
    line-height: 1.5;
}
/* ... */

